[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.0",
    "pypdf2>=3.0.1",
    "reportlab>=4.4.1",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.4",
    "streamlit>=1.45.1",
]
